--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practice Portfolio Site</title>
-	<!-- Including Bootstrap for future dev -->
+	<!-- Including Bootstrap for future development -->
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
 </head>
@@ -36,7 +36,7 @@
 <div style="font-size: 7.5vw;">
 	<center><p>Jason Shores</center>
 </div>
-<div class="left" style="padding: 5%;">
+<div class="left">
 	<p>
 		<picture>
 			<source srcset="img/peacockfan.jpg">
