--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Practice Portfolio Site</title>
-	<!-- Including Bootstrap for future development -->
-	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Practice Portfolio Site</title>
+  <link rel="stylesheet" href="./include/style.css">
+  <script src="https://kit.fontawesome.com/45bcd02cb4.js" crossorigin="anonymous"></script>
 </head>
-<header>
-	<!--- Home of future header stuff -->
-</header>
-
-<style> 
-.left {
-	float: left;
-	width: 50%;
-}
-
-.right {
-	float: left;
-	width: 40%;
-}
-
-@media screen and (max-width: 600px) {
-	.left, .right {
-		width: 100%;
-		padding: 10%;
-	}
-}
-
-
-</style>
 <body>
+<label>
+  <input type="checkbox">
+  <span class="menu">
+    <span class="hamburger"></span>
+  </span>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="OA.HTML">Overstreet Access</a></li>
+    <li><a href="DTV.HTML">Directv Business Market</a></li>
+  </ul>
+</label>
 
-<div style="font-size: 7.5vw;">
-	<center><p>Jason Shores</center>
+<div class="herocard">
+  <p>
+    <span>Hi, I'm Jason</span><br/>
+    <span class="heroloc">I like turning user journeys into joyrides.</span><br/>
+    <span class="heroloc"><i class='fas fa-map-marker-alt'></i>  Nashville, TN</span>
+  </p>
 </div>
-<div class="left">
-	<p>
-		<picture>
-			<source srcset="img/peacockfan.jpg">
-			<img src="img/peacockfan.jpg" alt="peacock" style="width:80%; border-radius: 15%;">
-		</picture>
+
+<div class="newcard">
+  <div class="card-container">
+    <picture class="card-image">
+      <source srcset="./img/oamobile.png" media="(max-width: 600px)" type="image/png">
+      <source srcset="./img/oathumb.png" type="image/png">
+      <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
+    </picture>
+    <p class="card-text">Overstreet Access</p>
+  </div>
 </div>
-<div class="right" style="padding: 5%;">
-	<center><span style="font-size: 2.5vw;"><p><strong><h5>(Generated with Space Ipsum)</h5></strong></span></center>
-	<span style="font-size: 2vw;"><p>Look again at that dot. That's here. That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," every saint and sinner in the history of our species lived there--on a mote of dust suspended in a sunbeam.</span>
+
+<div class="newcard">
+  <div class="card-container">
+    <picture class="card-image">
+      <source srcset="./img/dtvmobile.png" media="(max-width: 600px)" type="image/png">
+      <source srcset="./img/dtvlarge.png" type="image/png">
+      <img src="./img/dtvlarge.png" alt="DTV Market Thumbnail">
+    </picture>
+    <p class="card-text">Directv Market</p>
+  </div>
 </div>
+
 </body>
 <footer><!-- Soon --></footer>
 </html>
