--- a/OA.html
+++ b/OA.html
@@ -14,8 +14,8 @@
       </span>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="OA.HTML">Overstreet Access</a></li>
-        <li><a href="DTV.HTML">Directv Business Market</a></li>
+        <li><a href="OA.html">Overstreet Access</a></li>
+        <li><a href="DTV.html">Directv Business Market</a></li>
       </ul>
     </label>
     <div class="content-wrap">
