--- a/DTV.html
+++ b/DTV.html
@@ -24,8 +24,11 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/dtvmobile.png">
-                <img src="./img/dtvlarge.png" alt="Laptop">
+                <source srcset="./img/dtvmobile.png" media="(max-width: 600px)" type="image/png">
+                <source srcset="./img/dtvlarge.png" type="image/png">
+                <img src="./img/dtvlarge.png" alt="DTV on laptop">
+
+
             </picture>
         </section>
         <section class="text-section">
@@ -34,20 +37,11 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/dtv.png">
-                <img src="./img/dtv.png" alt="Jason's Work Thumbnail">
+                <img src="./img/dtv.png" alt="DTV fullscreen">
             </picture>
         </section>
         <section class="text-section">
             <p>The site launched and was well received by the users due to it providing a painless experience when compared to the previous site.</p>
-        </section>
-        <section class="image-section">
-            <picture>
-                <source media="(max-width: 600px)" srcset="./img/oamenu.png">
-                <img src="./img/oamenu.png" alt="Jason's Work Thumbnail">
-            </picture>
-        </section>
-        <section class="text-section">
-            <p>Ultimately, our client's site launched at San Diego Comic-Con and is still going strong today: <a href="https://www.overstreetaccess.com/" target="_blank" rel="noopener noreferrer">Overstreet Access</a></p>
         </section>
     </div>
 </body>
