--- a/OA.html
+++ b/OA.html
@@ -25,8 +25,9 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/oamobile.png">
-                <img src="./img/oathumb.png" alt="Jason's Work Thumbnail">
+                    <source srcset="./img/oamobile.png" media="(max-width: 600px)" type="image/png">
+                    <source srcset="./img/oathumb.png" type="image/png">
+                    <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
             </picture>
         </section>
         <section class="text-section">
@@ -35,7 +36,7 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/oasitemap.png">
-                <img src="./img/oasitemap.png" alt="Jason's Work Thumbnail">
+                <img src="./img/oasitemap.png" alt="Overstreet Site Map">
             </picture>
         </section>
         <section class="text-section">
@@ -44,7 +45,7 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/oamenu.png">
-                <img src="./img/oamenu.png" alt="Jason's Work Thumbnail">
+                <img src="./img/oamenu.png" alt="Overstreet Menu">
             </picture>
         </section>
         <section class="text-section">
