--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
 
 <div class="herocard">
   <p>
-    <span>Hi, I'm Jason</span><br/>
+    <span style="font-size: 4vw;">Hi, I'm Jason</span><br/>
     <span class="heroloc">I like turning user journeys into joyrides.</span><br/>
     <span class="heroloc"><i class='fas fa-map-marker-alt'></i>  Nashville, TN</span>
   </p>
 </div>
 
-<div class="newcard">
+<div class="newcard"><a href="OA.html">
   <div class="card-container">
     <picture class="card-image">
       <source srcset="./img/oamobile.png" media="(max-width: 600px)" type="image/png">
       <source srcset="./img/oathumb.png" type="image/png">
       <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
     </picture>
-    <p class="card-text">Overstreet Access</p>
-  </div>
+    <p class="card-text">Project: <strong>Overstreet Access</strong></p>
+  </div></a>
 </div>
 
-<div class="newcard">
+<div class="newcard"><a href="dtv.html">
   <div class="card-container">
     <picture class="card-image">
       <source srcset="./img/dtvmobile.png" media="(max-width: 600px)" type="image/png">
       <source srcset="./img/dtvlarge.png" type="image/png">
       <img src="./img/dtvlarge.png" alt="DTV Market Thumbnail">
     </picture>
-    <p class="card-text">Directv Market</p>
-  </div>
+    <p class="card-text">Project: <strong>Directv Market</strong></p>
+  </div></a>
 </div>
 
 </body>
