--- a/OA.html
+++ b/OA.html
@@ -25,7 +25,7 @@
         </section>
         <section class="image-section">
             <picture>
-                    <source srcset="./img/oamobile.png" media="(max-width: 600px)" type="image/png">
+                    <source srcset="./img/oamobile2.png" media="(max-width: 600px)" type="image/png">
                     <source srcset="./img/oathumb.png" type="image/png">
                     <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
             </picture>
@@ -36,7 +36,7 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/oasitemap.png">
-                <img src="./img/oasitemap.png" alt="Overstreet Site Map">
+                <img src="./img/oasitemap2.png" alt="Overstreet Site Map">
             </picture>
         </section>
         <section class="text-section">
@@ -45,7 +45,7 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/oamenu.png">
-                <img src="./img/oamenu.png" alt="Overstreet Menu">
+                <img src="./img/oamenu2.png" alt="Overstreet Menu">
             </picture>
         </section>
         <section class="text-section">
