--- a/OA.html
+++ b/OA.html
@@ -35,7 +35,7 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/oasitemap.png">
+                <source media="(max-width: 600px)" srcset="./img/oasitemap2.png">
                 <img src="./img/oasitemap2.png" alt="Overstreet Site Map">
             </picture>
         </section>
@@ -44,7 +44,7 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/oamenu.png">
+                <source media="(max-width: 600px)" srcset="./img/oamenu2.png">
                 <img src="./img/oamenu2.png" alt="Overstreet Menu">
             </picture>
         </section>
