--- a/OA.html
+++ b/OA.html
@@ -25,7 +25,7 @@
         </section>
         <section class="image-section">
             <picture>
-                    <source srcset="./img/oamobile2.png" media="(max-width: 600px)" type="image/png">
+                    <source srcset="./img/oamobile2.PNG" media="(max-width: 600px)" type="image/png">
                     <source srcset="./img/oathumb.png" type="image/png">
                     <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
             </picture>
@@ -35,8 +35,8 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/oasitemap2.png">
-                <img src="./img/oasitemap2.png" alt="Overstreet Site Map">
+                <source media="(max-width: 600px)" srcset="./img/oasitemap2.PNG">
+                <img src="./img/oasitemap2.PNG" alt="Overstreet Site Map">
             </picture>
         </section>
         <section class="text-section">
@@ -44,8 +44,8 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/oamenu2.png">
-                <img src="./img/oamenu2.png" alt="Overstreet Menu">
+                <source media="(max-width: 600px)" srcset="./img/oamenu2.PNG">
+                <img src="./img/oamenu2.PNG" alt="Overstreet Menu">
             </picture>
         </section>
         <section class="text-section">
