--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Practice Portfolio Site</title>
+  <title>Class Portfolio Site</title>
   <link rel="stylesheet" href="./include/style.css">
   <script src="https://kit.fontawesome.com/45bcd02cb4.js" crossorigin="anonymous"></script>
 </head>
@@ -15,8 +15,8 @@
   </span>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="OA.html">Overstreet Access</a></li>
-    <li><a href="DTV.html">Directv Business Market</a></li>
+    <li><a href="VUD.html">The VUD</a></li>
+    <li><a href="DAR.html">@Design AR</a></li>
   </ul>
 </label>
 
@@ -31,22 +31,22 @@
 <div class="newcard"><a href="OA.html">
   <div class="card-container">
     <picture class="card-image">
-      <source srcset="./img/oamobile.png" media="(max-width: 600px)" type="image/png">
-      <source srcset="./img/oathumb.png" type="image/png">
-      <img src="./img/oathumb.png" alt="Overstreet Access Thumbnail">
+      <source srcset="./img/vudmobile.png" media="(max-width: 600px)" type="image/png">
+      <source srcset="./img/vudmockup.png" type="image/png">
+      <img src="./img/vudmockup.png" alt="VUD Thumbnail">
     </picture>
-    <p class="card-text">Project: <strong>Overstreet Access</strong></p>
+    <p class="card-text">Project: <strong>VUD</strong></p>
   </div></a>
 </div>
 
 <div class="newcard"><a href="dtv.html">
   <div class="card-container">
     <picture class="card-image">
-      <source srcset="./img/dtvmobile.png" media="(max-width: 600px)" type="image/png">
-      <source srcset="./img/dtvlarge.png" type="image/png">
-      <img src="./img/dtvlarge.png" alt="DTV Market Thumbnail">
+      <source srcset="./img/armobile.png" media="(max-width: 600px)" type="image/png">
+      <source srcset="./img/armockup.png" type="image/png">
+      <img src="./img/armockup.png" alt="AR Thumbnail">
     </picture>
-    <p class="card-text">Project: <strong>Directv Market</strong></p>
+    <p class="card-text">Project: <strong>@Design AR Link</strong></p>
   </div></a>
 </div>
 
