--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </p>
 </div>
 
-<div class="newcard"><a href="OA.html">
+<div class="newcard"><a href="VUD.html">
   <div class="card-container">
     <picture class="card-image">
       <source srcset="./img/vudmobile.png" media="(max-width: 600px)" type="image/png">
@@ -39,7 +39,7 @@
   </div></a>
 </div>
 
-<div class="newcard"><a href="dtv.html">
+<div class="newcard"><a href="DAR.html">
   <div class="card-container">
     <picture class="card-image">
       <source srcset="./img/armobile.png" media="(max-width: 600px)" type="image/png">
