--- a/DAR.html
+++ b/DAR.html
@@ -24,9 +24,9 @@
             <p>The Project: Create an AR experience that exemplifies the @Design program and the University of Baltimore.</p>
         </section>
         <section class="image-section">
-            <img srcset="./img/webarmobile.png 800w, ./img/webar.png"
+            <img srcset="./img/webarmobile.png 800w, ./img/webar.PNG"
                 sizes="(max-width: 800px) 800px"
-                src="./img/webar.png" 
+                src="./img/webar.PNG" 
                 alt="WebAR Screenshot">
         </section>
         <section class="text-section">
@@ -34,7 +34,7 @@
         </section>
         <section class="image-section">
             <picture>
-                <source media="(max-width: 600px)" srcset="./img/webartool.png">
+                <source media="(max-width: 600px)" srcset="./img/webartool.PNG">
                 <img src="./img/webartool.png" alt="MywebAR Tool View">
             </picture>
         </section>
