--- a/DAR.html
+++ b/DAR.html
@@ -24,7 +24,7 @@
             <p>The Project: Create an AR experience that exemplifies the @Design program and the University of Baltimore.</p>
         </section>
         <section class="image-section">
-            <img srcset="./img/webarmobile.png 800w, ./img/webar.PNG"
+            <img srcset="./img/webarmobile.PNG 800w, ./img/webar.PNG"
                 sizes="(max-width: 800px) 800px"
                 src="./img/webar.PNG" 
                 alt="WebAR Screenshot">
@@ -35,7 +35,7 @@
         <section class="image-section">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/webartool.PNG">
-                <img src="./img/webartool.png" alt="MywebAR Tool View">
+                <img src="./img/webartool.PNG" alt="MywebAR Tool View">
             </picture>
         </section>
         <section class="text-section">
